# text2graph

./: .env.example  db.py  main.py  pyproject.toml  pytest.ini
Notebooks/: poc.ipynb  poc2.ipynb
modules/: ollama_client.py
src/text2graph/: __init__.py  lmstudio.ipynb  main.py
src/text2graph/modules/: __init__.py  ollama_client.py
tests/: __init__.py  test_db.py  test_ollama_client.py
