[project]
name = "text2graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.6.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
