[project]
name = "text2graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "click>=8.3.1",
    "joblib>=1.5.3",
    "nltk>=3.9.2",
    "regex>=2026.1.15",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/text2graph"
Repository = "https://github.com/yourusername/text2graph.git"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/text2graph"]
